apps/react2/deployment.yml
# Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react2
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: react2
  template:
    metadata:
      labels:
        app: react2
    spec:
      containers:
        - name: react2
          image: skoopy365/react2:20250624-035025 # {"$imagepolicy": "flux-system:react2-app-policy"}
          ports:
            - containerPort: 3001
          readinessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 20
            periodSeconds: 20
