apps/react2/service.yml
apiVersion: v1
kind: Service
metadata:
  name: react2
  namespace: default
spec:
  selector:
    app: react2
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
