apps/react2/ingress-clusterissuer-certificate.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react2
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "acme-issuer"
spec:
  ingressClassName: haproxy
  tls:
    - hosts:
        - react2.run.place
      secretName: cert-react2
  rules:
    - host: react2.run.place
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react2
                port:
                  number: 80
